--- a/desafio009.html
+++ b/desafio009.html
@@ -19,7 +19,7 @@
         <br>
         <a href="vídeo03.html" target="_self" rel="next"> <img src="Thumbs/thumb03.jpg" alt="Thumb Video 03" width="500"></a>
         <a href="vídeo04.html" target="_self" rel="next"> <img src="Thumbs/thumb04.jpg" alt="Thumb Video 04" width="500"></a>
-    </center>
+    </center> <!--CENTER É UMA TAG OBSOLETA>
         
 </body>
 </html>
